Implement invoice preview before creation
- Add buildInvoicePreview() to show invoice before saving to DB
- Add /invoices/create/confirm endpoint for final creation
- Fix immutable collection issue (.toList() → .collect(Collectors.toList()))
- Add validation for timesheets from different clients
- Update templates: preview buttons, error messages, hourly rate display
- Add 4 tests for preview functionality
- Fix test config (FTP/JWT properties)
- All 168 tests passing